# adapt-trade

./: README.md  pyproject.toml
app/: main.py
src/adapt_trade/: mlflow.db
src/adapt_trade/features/: pipeline.py
src/adapt_trade/ingestion/: ws_client.py
src/adapt_trade/model/: learner.py
src/adapt_trade/scripts/: backtest.py  fetch_historical.py  live.py
src/data/: btcusdt_15m.csv  btcusdt_1h.csv
src/ingestion/: ws_client.py
src/ingestion.egg-info/: PKG-INFO  SOURCES.txt
src/logs/: predictions.csv
test/: backtest_baseline.txt  backtest_rsi_added.txt  test_ingestion.py
